added ex and skills need to fix format of skills

--- a/index.html
+++ b/index.html
@@ -62,23 +62,22 @@ I have a strong passion for web development, full stack development, mobile deve
     <h4>MAY 2021 – MAY 2022</h4>
 </div>
 <div class="roles-div">
-    <h4>GEORGIA TECH RESEARCH INSTITUTE </h4>
-    <h4> SOFTWARE DEVELOPMENT INTERN</h4>
-    
-    
-    <h4>GEORGIA TECH RESEARCH INSTITUTE </h4>
-    <h4> SOFTWARE DEVELOPMENT CO-OP</h4>
-</div>
+    <h4>GEORGIA TECH RESEARCH INSTITUTE - SOFTWARE DEVELOPMENT INTERN </h4>
+    <h4>GEORGIA TECH RESEARCH INSTITUTE - SOFTWARE DEVELOPMENT CO-OP </h4>
 
 </div>
-
-
-
+</div>
 </section>
   
   <section id="skills">
   <h3>SKILLS</h3>
+  <div class="both-skil-type-and-names-div">
+  <div class="skill-type-div">
   <h4>PROGRAMMING LANGUAGES:</h4>
+  <h4>FRAMEWORKS:</h4>
+  <h4>SOFTWARE TOOLS:</h4>
+</div>
+<div class="skill-names-div">
   <p> Java,
   C#,
   Python,
@@ -89,15 +88,19 @@ I have a strong passion for web development, full stack development, mobile deve
   Swift,
   XML,
   MySQL</p>
-  <h4>FRAMEWORKS:</h4>
+  
   <p>React,
+    React Native,
   Node.js,
   Django,
   JavaFX,
   Vue.js,
-  SwiftUI</p>
-  <h4>Software Tools:</h4>
+  SwiftUI,
+  PyTorch </p>
+ 
   <p>Git, IntelliJ, Eclipse, Visual Studio Code, GitHub, Jira, Confluence</p>
+</div>
+</div>
   </section>
   
   
