finished adding all info

--- a/index.html
+++ b/index.html
@@ -106,15 +106,54 @@ I have a strong passion for web development, full stack development, mobile deve
   
   <section id="projects">
     <h3>PROJECTS</h3>
-   <div class="project-tile"> </div>
+   <div class="project-tile">
+
+    <div class="label-div">
+<h4>PROJECT</h4>  
+<h4>UTILIZED</h4>
+</div>
+
+<hr>
+<div class="project-group">
+<div class="project-title">
+    <h4><a href="https://github.com/angelacao2109/ATSResumeTool/tree/develop">ATS RESUME TOOL</a></h4>
+    <h4><a href="https://github.com/angelacao2109/angelacao2109.github.io">PORTFOLIO WEBSITE</a></h4>
+    <h4><a href="https://github.com/angelacao2109/Cinema-E-Booking-System/tree/sprint2_backend">CINEMA E-BOOKING SYSTEM</a></h4>
+    <h4><a href="https://github.com/angelacao2109/JukeBox">JUKE BOX</a></h4>
+    <h4><a href="https://github.com/angelacao2109/PetShelterFinderApp">PET SHELTER FINDER APP</a></h4>
+</div>
+
+
+<div class="project-utlized">
+    <h4>Python, PyPDF2, docx2txt, spaCy, nltk, tkinter, pandas.</h4>
+    <h4>Javascript, HTML,CSS</h4>
+    <h4>HTML, CSS, Vue.js, TypeScript, Spring Boot, SQL, Docker, Postman</h4>
+    <h4>Swift, SwiftUI</h4>
+    <h4>Swift, SwiftUI</h4>
+</div>
+</div>
+    
+
+ 
+
+
+
+
+</div>
   
   </section>
   
   
   <section id="contact">
     <h3>CONTACT</h3>
-   <h4>ANGELACAO2109@GMAIL.COM</h4>
+<div class="format-contacts">
+   <h4><a href="mailto:angelacao2109@gmail.com">ANGELACAO2109@GMAIL.COM</a></h4>
+   <h4><a href="https://www.linkedin.com/in/angela-c1" target="_blank" >LINKEDIN</a></h4>
+</div>
 
-    
-  
+
+
   </section>
+
+ 
+  
