--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ I have a strong passion for web development, full stack development, mobile deve
 
 
 <div class="project-utlized">
-    <h4>Python, PyPDF2, docx2txt, spaCy, nltk, tkinter, pandas.</h4>
+    <h4>Python, PyPDF2, docx2txt, spaCy, nltk, tkinter, pandas</h4>
     <h4>Javascript, HTML,CSS</h4>
     <h4>HTML, CSS, Vue.js, TypeScript, Spring Boot, SQL, Docker, Postman</h4>
     <h4>Swift, SwiftUI</h4>
