move nav bar add more experience

--- a/index.html
+++ b/index.html
@@ -91,12 +91,14 @@
     <div class="dates-div">
       <h4>MAY 2023 – AUG 2023</h4>
       <h4>MAY 2021 – MAY 2022</h4>
+      <h4>JAN 2021 - MAY 2021</h4>
     </div>
     <div class="roles-div">
       <h4 style="padding-left: 8px">
         GEORGIA TECH RESEARCH INSTITUTE - SOFTWARE DEVELOPMENT INTERN
       </h4>
       <h4>GEORGIA TECH RESEARCH INSTITUTE - SOFTWARE DEVELOPMENT CO-OP</h4>
+      <h4 style="padding-right: 336px;"> ECGO - QUALITY ASSURANCE INTERN </h4>
     </div>
   </div>
 </section>
